# nlp-notebook

./: README.md  docker-compose.yml  pyproject.toml
docker/jupyter/: Dockerfile  test.md
